# raglite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  QUICKSTART_LOGIN.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  raglite.db  reset_dev_tenant.py
alembic/: env.py  script.py.mako
alembic/versions/: 0ed8975f4496_init_schema.py  85fe3dccc734_add_language_column.py  9c4f1d6f0c9a_add_app_settings_table.py  a1b2c3d4e5f6_add_unique_constraint_tenant_name.py  b2c3d4e5f6a7_add_user_table.py  c7e9b4d1f8a2_add_model_configs_table.py  d9f3a6b7c1e2_add_rerank_config.py  e2f4c9a7b1d3_add_user_profiles_table.py
app/: __init__.py  auth.py  config.py  dedup.py  deps.py  main.py  schemas.py  schemas_auth.py  schemas_tenant.py  services.py  settings_service.py  tasks.py  user_profile_service.py
app/api/: __init__.py  routes.py
core/: answerer.py  bm25_memory.py  chunker.py  embedder.py  interfaces.py  opensearch_bm25.py  parser.py  pipeline.py  reranker.py  rewriter.py  security.py  storage.py  vectorstore.py
docs/: AUTH_COMPLETE.md  LOGIN_IMPLEMENTATION.md
infra/: db.py  models.py
scripts/: comprehensive_test.sh  create_admin_standalone.py  create_admin_user.py  reset_tenants.py  run_migrations.py  setup_auth.sh  test_api.sh
specs/: 000-raglite-spec.md  001-ui-spec.md
tests/: test_reranker.py  test_security_hardening.py  test_smoke.py
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx
ui/src/hooks/: useDatasets.ts  (+4 more)
workers/: tasks.py  worker.py
(+22 files in other folders)
